--- a/.github/workflows/sync-wiki.yaml
+++ b/.github/workflows/sync-wiki.yaml
@@ -37,9 +37,13 @@ jobs:
         git show --name-only  best-wiki-git/master
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
+        # merge, but don't commit the merge
         git merge --no-ff --no-commit best-wiki-git/master
+        # unstage the file
         git reset HEAD .github/workflows/sync-wiki.yaml
+        # revert the file to its original state
         git checkout -- .github/workflows/sync-wiki.yaml
+        # commit the merge
         git commit -m "merge rusEFI wiki"
 
     - name: Push changes to rusefi_documentation technical wiki
