--- a/.github/workflows/build-firmware.yaml
+++ b/.github/workflows/build-firmware.yaml
@@ -85,7 +85,10 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: recursive
-  
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '8'
+
     - name: Generate Configs
       if: ${{ matrix.skip-config != 'yes' }}
       working-directory: ./firmware/
