--- a/.github/workflows/build-firmware.yaml
+++ b/.github/workflows/build-firmware.yaml
@@ -212,6 +212,9 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: recursive
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '8'
 
     - name: Generate Enum Strings
       working-directory: ./firmware/
