--- a/firmware/config/boards/microrusefi/connectors/main.yaml
+++ b/firmware/config/boards/microrusefi/connectors/main.yaml
@@ -12,6 +12,11 @@ pins:
     ts_name: Battery Sense
     type: 12V
 
+  - pin: 2
+    function: Power GND
+    type: pgnd
+    color: white
+
   # default Idle Air Control TLE8888 high current low side: VVT2 TLE8888_OUT5
   - pin: 3
     id: TLE8888_PIN_5
@@ -21,6 +26,21 @@ pins:
     ts_name: 3 - Lowside 2
     type: ls
 
+  - pin: 4
+    function: ETB+
+    type: etb
+    color: white
+
+  - pin: 5
+    function: 12V supply from Key (turn on/off power)
+    type 12V
+    color: black
+
+  - pin: 6
+    function: Power GND
+    type: pgnd
+    color: black
+
   # default VVT TLE8888 high current low side: VVT1 TLE8888_OUT6
   - pin: 7
     id: TLE8888_PIN_6
@@ -29,6 +49,11 @@ pins:
     function: VVT
     ts_name: 7 - Lowside 1
     type: ls
+
+  - pin: 8
+    function: ETB-
+    type: ETB-
+    color: black
 
   # TC4427 ignition outputs (5v)
   - pin: 9
@@ -80,6 +105,21 @@ pins:
     ts_name: 14 - GP Out 5
     type: gp_high
 
+  - pin: 15
+    function: USB white wire https://youtu.be/4v2VnP-YdlQ
+    type: usb
+    color: yellow
+
+  - pin: 16
+    function: USB green wire https://youtu.be/4v2VnP-YdlQ
+    type: usb
+    color: yellow
+
+  - pin: 17
+    function: Signal GND
+    type: sgnd
+    color: red right
+
   - pin: 18
     id: [GPIOA_0, EFI_ADC_0]
     class: [switch_inputs, analog_inputs]
@@ -103,6 +143,11 @@ pins:
     function: Throttle position sensor (TPS)
     ts_name: 20 - AN volt 5
     type: av
+
+  - pin: 21
+    function: Signal GND
+    type: sgnd
+    color: dark green
 
   - pin: 22
     id: [GPIOA_3, EFI_ADC_3]
@@ -159,6 +204,11 @@ pins:
   - id: AV10
     class: outputs
     ts_name: AUX AV10 reuse
+
+  - pin: 29
+    function: Main relay control signal (low side)
+    type: mr
+    color: pink right
 
   - pin: 30
     id: [GPIOC_5, EFI_ADC_15]
@@ -242,6 +292,11 @@ pins:
     ts_name: 38 - Injector 2
     type: inj
 
+  - pin: 39
+    function: MAP sensor supply
+    type: 5v
+    color: grey
+
   - pin: 40
     id: [GPIOB_1, EFI_ADC_9]
     class: [switch_inputs, analog_inputs]
@@ -278,6 +333,11 @@ pins:
     ts_name: 43 - GP Out 4
     type: [gp_low, gp_pp]
 
+  - pin: 44
+    function: TPS sensor supply
+    type: 5v
+    color: brown left
+
   - pin: 45
     id: GPIOC_6
     class: event_inputs
@@ -285,6 +345,21 @@ pins:
     function: Crank VR+/hall
     ts_name: 45 - VR/Hall Crank
     type: vr hall
+
+  - pin: 46
+    function: Crank VR- (do not connect if hall)
+    type: vr
+    color: light green
+
+  - pin: 47
+    function: CAN bus
+    type: can
+    color: light green
+
+  - pin: 48
+    function: CAN bus
+    type: can
+    color: light green
 
 info:
   image:
