--- a/firmware/bootloader/src/Makefile
+++ b/firmware/bootloader/src/Makefile
@@ -21,7 +21,7 @@ DDEFS += -DHAL_USE_FLASH=FALSE
 DDEFS += -DPRIMARY_UART_DMA_MODE=FALSE
 
 # disable USB (The bootloader has currently UART support only)
-DDEFS += -DEFI_USB_SERIAL=FALSE -DHAL_USE_SERIAL_USB=FALSE -DHAL_USE_USB=FALSE -DHAL_USE_USB_MSD=FALSE
+DDEFS += -DEFI_USB_SERIAL=FALSE
 # disable CAN
 DDEFS += -DEFI_CAN_SUPPORT=FALSE
 
