--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -66,9 +66,22 @@
             "executable": "${workspaceRoot}/firmware/build/rusefi.elf",
             "device": "STM32F767V",
             "v1": false,
-            "svdFile": "${workspaceRoot}/firmware/ext/cmsis-svd/data/STMicro/STM32F7x6.svd",
+            "svdFile": "${workspaceRoot}/firmware/ext/cmsis-svd/data/STMicro/STM32F7x7.svd",
             "servertype": "openocd",
-            "configFiles": ["board/stm32f7discovery.cfg"],
+            "configFiles": ["interface/stlink.cfg", "target/stm32f7x.cfg"],
+            "runToMain": true
+        },
+        {
+            "name": "Debug H743",
+            "type": "cortex-debug",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "executable": "${workspaceRoot}/firmware/build/rusefi.elf",
+            "device": "STM32H743V",
+            "v1": false,
+            "svdFile": "${workspaceRoot}/firmware/ext/cmsis-svd/data/STMicro/STM32H743x.svd",
+            "servertype": "openocd",
+            "configFiles": ["interface/stlink.cfg", "target/stm32h7x.cfg"],
             "runToMain": true
         }
 	]
