--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -30,9 +30,61 @@
             }
 		},
 		{
+            "label": "Build Firmware (Proteus F7)",
+            "type": "shell",
+            "command": "make -j16 PROJECT_BOARD=proteus PROJECT_CPU=ARCH_STM32F7",
+            "options": {
+                "cwd": "${workspaceRoot}/firmware"
+            },
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+		},
+		{
+            "label": "Build Firmware (Proteus H7) EXPERIMENTAL",
+            "type": "shell",
+            "command": "make -j16 PROJECT_BOARD=proteus PROJECT_CPU=ARCH_STM32H7",
+            "options": {
+                "cwd": "${workspaceRoot}/firmware"
+            },
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+		},
+		{
+            "label": "Build Firmware (hellen72)",
+            "type": "shell",
+            "command": "make -j16 PROJECT_BOARD=hellen/hellen72",
+            "options": {
+                "cwd": "${workspaceRoot}/firmware"
+            },
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+		},
+		{
             "label": "Build Firmware (microRusEfi F4)",
             "type": "shell",
             "command": "make -j12 PROJECT_BOARD=microrusefi",
+            "options": {
+                "cwd": "${workspaceRoot}/firmware"
+            },
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+		},
+		{
+            "label": "Build Firmware (microRusEfi F7)",
+            "type": "shell",
+            "command": "make -j12 PROJECT_BOARD=microrusefi PROJECT_CPU=ARCH_STM32F7",
             "options": {
                 "cwd": "${workspaceRoot}/firmware"
             },
