replace null device with rusefi ini

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -202,6 +202,7 @@ $(info LDSCRIPT:      $(LDSCRIPT))
 # setting.
 CSRC =  $(ALLCSRC) \
 	$(CHIBIOS)/os/various/syscalls.c \
+	$(CHIBIOS_CONTRIB)/os/various/ramdisk.c \
 	$(TRIGGER_SRC) \
 	$(TRIGGER_DECODERS_SRC) \
 	$(DEV_SRC) \
