--- a/.github/workflows/build-firmware.yaml
+++ b/.github/workflows/build-firmware.yaml
@@ -89,9 +89,15 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: recursive
+
     - uses: actions/setup-java@v1
       with:
         java-version: '8'
+
+    - name: Install multilib, mingw, ncftp and mtools
+      run: |
+        sudo apt-get update
+        sudo apt-get install gcc-multilib g++-multilib g++-mingw-w64 gcc-mingw-w64 ncftp mtools
 
     - name: Generate Configs
       if: ${{ matrix.skip-config != 'yes' }}
@@ -136,12 +142,6 @@ jobs:
     # Make sure the compiler we just downloaded works - just print out the version
     - name: Test Compiler
       run: arm-none-eabi-gcc -v
-
-    - name: Install multilib, mingw, and ncftp
-      run: |
-        sudo apt-get update
-        sudo apt-get install gcc-multilib g++-multilib g++-mingw-w64 gcc-mingw-w64 ncftp mtools
-
 
     - name: Configs Set FTP variables
       env:
