--- a/.gitmodules
+++ b/.gitmodules
@@ -21,3 +21,6 @@
 [submodule "firmware/controllers/can/wideband_firmware"]
 	path = firmware/controllers/can/wideband_firmware
 	url = https://github.com/mck1117/wideband
+[submodule "firmware/ext/uzlib"]
+	path = firmware/ext/uzlib
+	url = https://github.com/pfalcon/uzlib
