fix master while we're at it

--- a/.github/workflows/gen-configs.yaml
+++ b/.github/workflows/gen-configs.yaml
@@ -15,7 +15,7 @@ jobs:
         fetch-depth: 0
 
     - name: Install Tools
-      run: sudo apt-get install ncftp sshpass
+      run: sudo apt-get install ncftp sshpass mtools
 
     - name: Generate Enum Strings
       working-directory: ./firmware/
