would separating installs make error more obvious?

--- a/.github/workflows/build-firmware.yaml
+++ b/.github/workflows/build-firmware.yaml
@@ -101,7 +101,9 @@ jobs:
     - name: Install multilib, mingw, ncftp and mtools
       run: |
         sudo apt-get update
-        sudo apt-get install gcc-multilib g++-multilib g++-mingw-w64 gcc-mingw-w64 ncftp mtools
+        sudo apt-get install gcc-multilib g++-multilib g++-mingw-w64 gcc-mingw-w64
+        sudo apt-get install ncftp
+        sudo apt-get install mtools
 
     - name: Generate Configs
       if: ${{ matrix.skip-config != 'yes' }}
@@ -251,7 +253,8 @@ jobs:
     - name: Install multilib, mingw, and ncftp
       run: |
         sudo apt-get update
-        sudo apt-get install gcc-multilib g++-multilib g++-mingw-w64 gcc-mingw-w64 ncftp
+        sudo apt-get install gcc-multilib g++-multilib g++-mingw-w64 gcc-mingw-w64
+        sudo apt-get install ncftp
 
     # Make sure the compiler we just downloaded works - just print out the version
     - name: Test Compiler
