--- a/.github/workflows/build-firmware.yaml
+++ b/.github/workflows/build-firmware.yaml
@@ -101,9 +101,7 @@ jobs:
     - name: Install multilib, mingw, ncftp and mtools
       run: |
         sudo apt-get update
-        sudo apt-get install gcc-multilib g++-multilib g++-mingw-w64 gcc-mingw-w64
-        sudo apt-get install ncftp
-        sudo apt-get install mtools
+        sudo apt-get install gcc-multilib g++-multilib g++-mingw-w64 gcc-mingw-w64 ncftp mtools
 
     - name: Generate Configs
       if: ${{ matrix.skip-config != 'yes' }}
@@ -253,8 +251,7 @@ jobs:
     - name: Install multilib, mingw, and ncftp
       run: |
         sudo apt-get update
-        sudo apt-get install gcc-multilib g++-multilib g++-mingw-w64 gcc-mingw-w64
-        sudo apt-get install ncftp
+        sudo apt-get install gcc-multilib g++-multilib g++-mingw-w64 gcc-mingw-w64 ncftp
 
     # Make sure the compiler we just downloaded works - just print out the version
     - name: Test Compiler
