false positive GHA drama #2446
poke #9

--- a/.github/workflows/build-unit-tests.yaml
+++ b/.github/workflows/build-unit-tests.yaml
@@ -69,7 +69,7 @@ jobs:
         git status
         git remote -v
         echo See https://github.com/rusefi/rusefi/issues/2446
-        git pull
+        git pull https://github.com/rusefi/rusefi master
         mv triggers.txt unit_tests
         mv *.logicdata  unit_tests
         git add unit_tests/triggers.txt
