try single quotes

--- a/.github/workflows/sync-wiki.yaml
+++ b/.github/workflows/sync-wiki.yaml
@@ -21,7 +21,7 @@ on: gollum
 jobs:
   sync:
     runs-on: ubuntu-latest
-    if: ${{github.actor != "actions-user"}}
+    if: ${{ github.actor != 'actions-user' }}
 
     steps:
     - name: Check out docs repo
