--- a/firmware/config/boards/proteus/connectors/white35.yaml
+++ b/firmware/config/boards/proteus/connectors/white35.yaml
@@ -32,11 +32,11 @@ pins:
     type: sgnd
 
   - pin: 9
-    function: Analog Voltage +5 supply #1
+    function: "Analog Voltage +5 supply #1"
     type: 5v
 
   - pin: 10
-    function: Analog Voltage +5 supply #2
+    function: "Analog Voltage +5 supply #2"
     type: 5v
 
   - pin: 11
@@ -51,64 +51,64 @@ pins:
     id: [GPIOC_0, EFI_ADC_10]
     class: [switch_inputs, analog_inputs]
     ts_name: Analog Volt 1
-    function: Analog Voltage Input #1
+    function: "Analog Voltage Input #1"
     type: av
 
   - pin: 14
     id: [GPIOC_2, EFI_ADC_12]
     class: [switch_inputs, analog_inputs]
     ts_name: Analog Volt 3
-    function: Analog Voltage Input #3
+    function: "Analog Voltage Input #3"
     type: av
 
   - pin: 15
     id: [GPIOA_0, EFI_ADC_0]
     class: [switch_inputs, analog_inputs]
     ts_name: Analog Volt 5
-    function: Analog Voltage Input #5
+    function: "Analog Voltage Input #5"
     type: av
 
   - pin: 16
     id: [GPIOA_2, EFI_ADC_2]
     class: [switch_inputs, analog_inputs]
     ts_name: Analog Volt 7
-    function: Analog Voltage Input #7
+    function: "Analog Voltage Input #7"
     type: av
 
   - pin: 17
     id: [GPIOA_4, EFI_ADC_4]
     class: [switch_inputs, analog_inputs]
     ts_name: Analog Volt 9
-    function: Analog Voltage Input #9
+    function: "Analog Voltage Input #9"
     type: av
 
   - pin: 18
     id: [GPIOA_6, EFI_ADC_6]
     class: [switch_inputs, analog_inputs]
     ts_name: Analog Volt 11
-    function: Analog Voltage Input #11
+    function: "Analog Voltage Input #11"
     type: av
 
   - pin: 19
     id: [GPIOC_4, EFI_ADC_14]
     class: [switch_inputs, analog_inputs]
     ts_name: Analog Temp 1
-    function: Analog Thermistor Input #1
+    function: "Analog Thermistor Input #1"
     type: at
 
   - pin: 20
     id: [GPIOB_0, EFI_ADC_8]
     class: [switch_inputs, analog_inputs]
     ts_name: Analog Temp 3
-    function: Analog Thermistor Input #3
+    function: "Analog Thermistor Input #3"
     type: at
 
   - pin: 21
-    function: Analog Voltage +5 supply #1
+    function: "Analog Voltage +5 supply #1"
     type: 5v
 
   - pin: 22
-    function: Analog Voltage +5 supply #2
+    function: "Analog Voltage +5 supply #2"
     type: 5v
 
   - pin: 23
@@ -119,35 +119,35 @@ pins:
     id: [GPIOC_1, EFI_ADC_11]
     class: [switch_inputs, analog_inputs]
     ts_name: Analog Volt 2
-    function: Analog Voltage Input #2
+    function: "Analog Voltage Input #2"
     type: av
 
   - pin: 25
     id: [GPIOC_3, EFI_ADC_13]
     class: [switch_inputs, analog_inputs]
     ts_name: Analog Volt 4
-    function: Analog Voltage Input #4
+    function: "Analog Voltage Input #4"
     type: av
 
   - pin: 26
     id: [GPIOA_1, EFI_ADC_1]
     class: [switch_inputs, analog_inputs]
     ts_name: Analog Volt 6
-    function: Analog Voltage Input #6
+    function: "Analog Voltage Input #6"
     type: av
 
   - pin: 27
     id: [GPIOA_3, EFI_ADC_3]
     class: [switch_inputs, analog_inputs]
     ts_name: Analog Volt 8
-    function: Analog Voltage Input #8
+    function: "Analog Voltage Input #8"
     type: av
 
   - pin: 28
     id: [GPIOA_5, EFI_ADC_5]
     class: [switch_inputs, analog_inputs]
     ts_name: Analog Volt 10
-    function: Analog Voltage Input #10
+    function: "Analog Voltage Input #10"
     type: av
 
   - pin: 29
@@ -165,15 +165,15 @@ pins:
     id: [GPIOB_1, EFI_ADC_9]
     class: [switch_inputs, analog_inputs]
     ts_name: Analog Temp 4
-    function: Analog Thermistor Input #4
+    function: "Analog Thermistor Input #4"
     type: at
 
   - pin: 32
-    function: Analog Voltage +5 supply #1
+    function: "Analog Voltage +5 supply #1"
     type: 5v
 
   - pin: 33
-    function: Analog Voltage +5 supply #2
+    function: "Analog Voltage +5 supply #2"
     type: 5v
 
   - pin: 34
