--- a/firmware/config/boards/hellen/hellen72/connectors/main.yaml
+++ b/firmware/config/boards/hellen/hellen72/connectors/main.yaml
@@ -383,6 +383,11 @@ pins:
     color: red, short wire
     type: ign
 
+  - pin: int_map
+    id: EFI_ADC_2
+    class: analog_inputs
+    ts_name: intMAP (A15)
+
   - pin: 4V
     id: EFI_ADC_4
     class: analog_inputs
