--- a/.gitmodules
+++ b/.gitmodules
@@ -24,3 +24,6 @@
 [submodule "firmware/ext/uzlib"]
 	path = firmware/ext/uzlib
 	url = https://github.com/pfalcon/uzlib
+[submodule "firmware/ext/lua"]
+	path = firmware/ext/lua
+	url = https://github.com/rusefi/lua
