--- a/.github/workflows/build-firmware.yaml
+++ b/.github/workflows/build-firmware.yaml
@@ -12,6 +12,9 @@ jobs:
       matrix:
         # What boards should we build for? In the 'include' section below,
         # set up what each of these boards needs to build.
+        #
+        # see also gen_config where we have a similar list for all boards!
+        #
         build-target: [hellen72, hellenNA6, cypress, frankenso_na6, kinetis, mre_f4, mre_f4_recovery, mre_f4_hardware_QC_special_build, mre_f7, prometheus_405, prometheus_469, proteus_f4, proteus_f4_hardware_QC_special_build, proteus_f7, proteus_h7, stm32f767_nucleo, stm32h743_nucleo, subaru_eg33_f7]
         
         include:
