--- a/firmware/config/boards/hellen/hellen64_miataNA6_94/connectors/main.yaml
+++ b/firmware/config/boards/hellen/hellen64_miataNA6_94/connectors/main.yaml
@@ -3,31 +3,30 @@ pins:
     function: 12V all times
     type: 12V
   - pin: 1B
+    id: EFI_ADC_5
     function: ECU power in start & run
     type: 12V
-
   - pin: 1D
     function: CAN bus high
     type: can
-
   - pin: 1F
     function: CAN bus low
     type: can
-
   - pin: 1E
+    id: GPIOG_4
     class: outputs
     function: Check Engine Light
     type: ls
-
     pin: 1F
+    id: GPIOD_13
     class: outputs
     ts_name: Tach_Out_95.5
     function: Tachometer
     type: ls
-
   - pin: 1G
+    id: GPIOI_8
     class: outputs
-    ts_name: 1G - IGN_1
+    ts_name: 1G - IGN_1 (1&4)
     type: ign
   - pin: 1H
     class: outputs
@@ -37,14 +36,14 @@ pins:
   - pin: 1I
     function: USB GND
     type: gnd
-
   - pin: 1J
+    id: GPIOH_15
     class: outputs
     ts_name: 1J - AC_Relay
     function: A/C Relay
     type: ls
-
   - pin: 1L
+    id: GPIOD_12
     class: outputs
     ts_name: 1L - Radiator_Fan_94-95
     function: Radiator Fan Relay
@@ -191,112 +190,93 @@ info:
     - pin: 1B
       x: 3984
       y: 512
-
     - pin: 1C
       x: 3860
       y: 312
     - pin: 1D
       x: 3860
       y: 512
-
     - pin: 1E
       x: 3735
       y: 352
     - pin: 1F
       x: 3735
       y: 544
-
     - pin: 1G
       x: 3624
       y: 352
     - pin: 1H
       x: 3624
       y: 544
-
     - pin: 1I
       x: 3508
       y: 352
     - pin: 1J
       x: 3508
       y: 544
-
     - pin: 1M
       x: 3284
       y: 352
     - pin: 1N
       x: 3284
       y: 544
-
     - pin: 1R
       x: 3062
       y: 544
-
     - pin: 1S
       x: 2952
       y: 352
     - pin: 1T
       x: 2952
       y: 544
-
     - pin: 1V
       x: 2838
       y: 512
-
     - pin: 3A
       x: 1604
       y: 312
     - pin: 3B
       x: 1604
       y: 512
-
     - pin: 3C
       x: 1488
       y: 312
     - pin: 3D
       x: 1488
       y: 512
-
     - pin: 3E
       x: 1368
       y: 360
     - pin: 3F
       x: 1368
       y: 552
-
     - pin: 3G
       x: 1256
       y: 360
-
     - pin: 3I
       x: 1140
       y: 360
     - pin: 3J
       x: 1140
       y: 552
-
     - pin: 3O
       x: 807
       y: 360
     - pin: 3P
       x: 807
       y: 552
-
     - pin: 3Q
       x: 690
       y: 360
-
-
     - pin: 3U
       x: 460
       y: 312
     - pin: 3V
       x: 460
       y: 512
-
     - pin: 3W
       x: 330
       y: 312
-
     - pin: 3Y
       x: 200
       y: 312
